# news

./: .gitignore  .golangci.yml  Cargo.toml  Justfile  LICENSE  Makefile  README.md  TODO.md  buf.gen.yaml  flake.nix  garnix.yaml  go.mod  go.sum  justfile  main.go  package-lock.json  pocketbase.nix  result  rust-toolchain.toml  sqlc.yaml  tailwind.config.js
.github/workflows/: deploy.yml  pr.yml
api/: api_test.go  server.go  week.go  week_test.go
app/: .air.toml  .kanelrc.cjs  go.mod  go.sum  index_test.go  justfile  package-lock.json  package.json  server.go  tailwind.config.js
app/app/: db.ts  entry.server.tsx  root.tsx
app/public/: in.css  public.go
app/server/: server.go
app/store/: days.go  driver.go  store.go
app/tests/: test.go
app/timeutil/: timeutil.go  timeutil_test.go
app/workers/: workers.go
cmd/: root.go
cmd/newsletter/: main.go
config/: config.go  development.go
contrib/: ci-docker
contrib/docker/: docker-compose.yaml
cron/: cron.go  status.go
db/: errors.go  executor.go
db/dbsqlc/: announcements.sql  announcements.sql.go  days.sql  days.sql.go  default.sql  default.sql.go  email_verifications.sql  email_verifications.sql.go  models.go  users.sql  users.sql.go
db/seeds/: main.sql  reset.sql
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: 000001_create_schema.down.sql  000001_create_schema.up.sql  000002_users.up.sql  1711499621_updated_users.go  1711499633_updated_users.go  1711499652_updated_users.go  1711500326_updated_users.go  1711504727_updated_users.go  1711505056_updated_users.go  1711506149_created_announcements.go  1711506429_updated_announcements.go  1711506648_updated_users.go  1711506810_updated_users.go  1711506846_updated_users.go  1711597026_updated_announcements.go  1711846047_updated_announcements.go  1711846282_updated_announcements.go  1711846545_updated_announcements.go  1711846751_updated_announcements.go  1711846807_updated_announcements.go  1711846875_updated_announcements.go  1711846888_updated_announcements.go  1712451261_updated_users.go  1713128648_updated_users.go
newsletter/: Cargo.toml  build.rs
newsletter/src/: config.rs  lib.rs  main.rs
newsletter/src/web/: error.rs  mod.rs  public.rs  statics.rs  templates.rs
nixos/: default.nix  secrets.nix
public/: tailwind.config.js  tailwind_in.css
resource/: announcements.go  announcements_test.go  days.go  days_test.go  users.go  users_test.go  verifications.go  verifications_test.go
resources/: Cargo.toml
scraping/: Cargo.toml
seeds/: main.sql  reset.sql
server/: server.go
store/: Cargo.toml
store/migrations/: 20240719045016_create_days_table.sql  20240720001044_create_users_table.sql
store/src/: lib.rs  utils.rs
store/src/models/: days.rs  mod.rs  users.rs
web/: encoding.go  error.go  handler.go  public.go  statics.go  templates.go  validation.go  watcher.go
(+140 files in other folders)
