[workspace]
resolver = "2"
members =  ["store", "resources", "scraping", "newsletter"]

[workspace.dependencies]
eyre = { version = "0.6.12" }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
thiserror = "1.0.63"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
keepcalm = "0.3.5"
sqlx = { version = "0.7.4", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
