[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
eyre.workspace = true
kankyo = "0.3.0"
resources = { version = "0.1.0", path = "../resources" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["json"] }
