[package]
name = "store"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde.workspace = true
sqlx = { version = "0.7.4", features = ["chrono", "migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.38.1", features = ["full"] }
thiserror.workspace = true
